--- a/cadastro_fluxo_de_caixa.html
+++ b/cadastro_fluxo_de_caixa.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <title>Cadastro - Fluxo de caixa</title>
 </head>
 <body>
@@ -15,27 +14,23 @@
             <label for="data">Data:</label>
             <input type="date" name="data"><br><br>
 
-            <label for="tipo">Tipo:</label><br>
-            <input type="radio"  name="entrada" value="entrada">
+            <label for="tipo" name="tipo">Tipo:</label>
+            <input type="radio" name="tipo" value="entrada">
             <label for="entrada">Entrada</label><br>
-            <input type="radio" name="saida" value="saida">
-            <label for="saida">Saída</label><br><br>
+            <input type="radio" name="tipo" value="saida">
+            <label for="css">Saída</label><br>
 
             <label for="valor">Valor:</label>
             <input type="number" step = ".01" name="valor"><br><br>
 
             <label for="historico">Histórico:</label><br>
-            <textarea name="historico"  cols="30" rows="10"></textarea>
-            <div class="dropdown">
-                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Dropdown
-                </button>
-                <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
-                  <button class="dropdown-item" type="button">Ação</button>
-                  <button class="dropdown-item" type="button">Another Ação</button>
-                  <button class="dropdown-item" type="button">Something else here</button>
-                </div>
-              </div>
+           <input type="text" name="historico" id="historico"><br><br>
+            <label for="cheque">Cheque:</label>
+
+            <select id="cheque"  name="c">
+              <option value="sim">Sim</option>
+              <option value="nao">Não</option>
+            </select><br><br>
 
             <button>Enviar</button>
         </fieldset>
